# bachelor-thesis

./: .gitignore  README.md
argos3-test/: CMakeLists.txt
argos3-test/controller/: CMakeLists.txt
argos3-test/controller/test_controller/: CMakeLists.txt  bug.cpp  bug.h  camera.cpp  camera.h  controller.cpp  controller.h  planner.cpp  planner.h  test_controller.cpp  test_controller.h  utils.cpp  utils.h
argos3-test/experiments/: sort.argos  test.argos
argos3-test/loop_functions/: CMakeLists.txt
argos3-test/loop_functions/sort_loop_function/: CMakeLists.txt  sort_loop_function.cpp  sort_loop_function.h
epuck-simulation/: CMakeLists.txt
epuck-simulation/experiments/: test.argos  twobox.argos
epuck-simulation/inc/: camera.h  cameraServerLoop.h  controller.h  masterLoopFunction.h  planner.h  protocol.h  serverHelperFunctions.h  swarmManager.h  test_controller.h
epuck-simulation/src/: bug.cpp  camera.cpp  cameraServerLoop.cpp  controller.cpp  masterLoopFunction.cpp  planner.cpp  swarmManager.cpp  test_controller.cpp
no_sort/experiments/: twobox.argos
no_sort/inc/: controller.h  serverHelperFunctions.h  swarmManager.h  test_controller.h
no_sort/src/: cameraServerLoop.cpp  controller.cpp  masterLoopFunction.cpp  planner.cpp  protocol.cpp  swarmManager.cpp
simulation/: CMakeLists.txt
simulation/experiments/: test.argos  twobox.argos
simulation/inc/: bug.h  camera.h  cameraServerLoop.h  controller.h  masterLoopFunction.h  matplotlibcpp.h  planner.h  protocol.h  serverHelperFunctions.h  sort_loop_function.h  swarmManager.h  test_controller.h
simulation/src/: CMakeLists.txt  bug.cpp  camera.cpp  cameraServerLoop.cpp  controller.cpp  masterLoopFunction.cpp  planner.cpp  protocol.cpp  sort_loop_function.cpp  swarmManager.cpp  test_controller.cpp
